--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,21 +1,53 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
 ​ .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 ​ .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 ​ .App-link {
-  color: #61dafb;
+	color: #61dafb;
+}
+
+.alert {
+	padding: 0.8rem;
+	margin: 1rem 0;
+	opacity: 0.9;
+	background: var(--light-color);
+	color: red;
+}
+
+.alert-primary {
+	background: var(--primary-color);
+	color: #fff;
+}
+
+.alert-light {
+	background: var(--light-color);
+}
+
+.alert-dark {
+	background: var(--dark-color);
+	color: #fff;
+}
+
+.alert-danger {
+	background: var(--danger-color);
+	color: rgb(17, 14, 14);
+}
+
+.alert-success {
+	background: var(--success-color);
+	color: rgb(3, 3, 3);
 }
