--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,11 +62,9 @@ h2 {
 	font-weight: bold;
 }
 
-.tbLogo {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 50%;
+img {
+	width: 100%;
+	height: 100%;
 }
 
 .alert {
