--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,5 @@
+/***** main styles *****/
+
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
@@ -99,11 +101,11 @@ img {
 	font-style: italic;
 }
 
-/*custom navbar css*/
+/***** custom navbar styles *****/
 
 .topnav :hover {
 	opacity: 1;
-	color: peachpuff;
+	color: #04c2f4;
 }
 
 .tbLOgo2 {
@@ -111,20 +113,20 @@ img {
 	width: 75px;
 }
 
-/*My profile css*/
+/***** My profile css *****/
 .profi {
 	margin-top: 20px;
 	text-align: center;
-	color: rgb(228, 136, 55);
-	font-style: italic;
 }
 
 .navb {
-	margin: 20px;
+	margin: 0 auto;
+	max-width: 1000px;
 	border-style: solid;
 	border-radius: 20px;
-	border-color: bisque;
+	border-color: #04c2f4;
 	background: rgba(0, 0, 0, 0);
+	box-shadow: 10px 10px 25px -16px rgba(0, 0, 0, 0.75);
 }
 
 .profilebtn {
@@ -135,18 +137,62 @@ img {
 	position: center;
 }
 
-/*/home css*/
-.home {
-	position: relative;
-	background-image: url('../src/components/spaceneedle.JPG');
-	height: 100%;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
-/*Myprofile*/
-
 .myprofile {
 	margin-bottom: 20px;
+}
+
+/***** /home css *****/
+.home {
+	background: url('../src//components/bg2.jpg') no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	background-size: 100% 100%;
+	padding-top: 20px;
+}
+
+/***** extra bootstrap styles *****/
+.container .jumbotron {
+	border-radius: 20px;
+	border-color: #04c2f4;
+	max-width: 1000px;
+	margin: 20px auto 0 auto;
+	box-shadow: 10px 10px 25px -16px rgba(0, 0, 0, 0.75);
+}
+
+.container {
+	padding-bottom: 200px;
+}
+
+/***** /feed css *****/
+.recipe-card {
+	display: flex;
+	padding: 20px;
+	color: #000000;
+	background-color: rgb(245, 245, 245);
+	box-shadow: 10px 10px 25px -16px rgba(0, 0, 0, 0.75);
+	border-radius: 20px;
+	margin: 0 auto 20px auto;
+	max-width: 700px;
+}
+
+.recipe-card p {
+	margin: 0px 20px;
+	text-align: left;
+	line-height: 2;
+}
+
+.recipe-card img {
+	max-width: 100%;
+	height: auto;
+}
+
+.category {
+	font-weight: bold;
+}
+
+.button {
+	text-align: center;
+	margin: 30px;
 }
