--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,7 @@
 /***** main styles *****/
 
+@import url('https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400&display=swap');
+
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
@@ -103,6 +105,10 @@ img {
 
 /***** custom navbar styles *****/
 
+.topnav {
+	font-family: 'Arvo', serif;
+}
+
 .topnav :hover {
 	opacity: 1;
 	color: #04c2f4;
@@ -163,6 +169,7 @@ img {
 
 .container {
 	padding-bottom: 200px;
+	font-family: 'Arvo', serif;
 }
 
 /***** /feed css *****/
@@ -189,7 +196,8 @@ img {
 }
 
 .category {
-	font-weight: bold;
+	font-family: 'Arvo', serif;
+	font-weight: 700;
 }
 
 .button {
